--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -12,11 +12,10 @@ font_size: L
 
 # SEO
 
-site_type: Person
+site_type:
 local_business_type: ''
 org_name: ''
 description: ''
-twitter: ''
 
 # Contact (edit or remove options as required)
 
@@ -63,6 +62,7 @@ main_menu:
   show_day_night: true
   show_search: true
   highlight_active_link: true
+
 
 # Localization
 
