added temp email to contact

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,7 +19,7 @@ description: ''
 
 # Contact (edit or remove options as required)
 
-email:
+email: "gmednick@gmail.com"
 phone:
 address:
   street:
