added email to contact form

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,7 +19,7 @@ description: ''
 
 # Contact (edit or remove options as required)
 
-email: "gmednick@gmail.com"
+email:
 phone:
 address:
   street:
