--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   - name: Team
     url: '#about2'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
+  # - name: Posts
+  #   url: '#posts'
+  #   weight: 20
   # - name: Projects
   #   url: '#projects'
   #   weight: 30
